move back to java 17 to be more usable in the wild